plugins {
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.mockito:mockito-core:5.4.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.4.0'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    testImplementation("org.assertj:assertj-core:3.22.0")

    implementation 'net.bytebuddy:byte-buddy:1.14.5'
    implementation("cglib:cglib:3.3.0")

    implementation 'org.mindrot:jbcrypt:0.4'
    implementation 'redis.clients:jedis:5.0.2'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
    implementation 'org.aspectj:aspectjweaver:1.9.21'


    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'

    implementation 'org.reflections:reflections:0.10.2'
    implementation 'org.javassist:javassist:3.28.0-GA'
    implementation 'org.ow2.asm:asm:9.7'
    implementation 'org.ow2.asm:asm-tree:9.7'

    testImplementation 'org.slf4j:slf4j-simple:1.7.32'
    implementation 'ch.qos.logback:logback-classic:1.2.6'

    implementation 'org.yaml:snakeyaml:1.29'

    implementation("org.objenesis:objenesis:3.3")

    implementation 'com.zaxxer:HikariCP:5.1.0'
    runtimeOnly 'mysql:mysql-connector-java:8.0.33'



}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-parameters']
}


test {
    useJUnitPlatform()
}